<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <com.example.administrator.dbtools.base.view.IconFontTextView
                android:id="@+id/tvContactCustomerService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/icon_contact_customer_service"
                android:textColor="@color/main_color_half"
                android:textSize="50sp"
                android:visibility="gone" />
        </RelativeLayout>


        <com.example.administrator.dbtools.base.view.zradiogroup.ZRadioGroup
            android:id="@+id/zRadiogroup"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/top_line">

            <com.example.administrator.dbtools.base.view.zradiogroup.ZRadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="-2dp"
                android:layout_weight="1"
                app:ZRadioButton_Icon="@string/icon_tools_joke"
                app:ZRadioButton_IconTextSize="18sp"
                app:ZRadioButton_Text="笑话" />

            <com.example.administrator.dbtools.base.view.zradiogroup.ZRadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="-2dp"
                android:layout_weight="1"
                app:ZRadioButton_Icon="@string/icon_tools_phone"
                app:ZRadioButton_IconTextSize="18sp"
                app:ZRadioButton_Text="查号" />

            <com.example.administrator.dbtools.base.view.zradiogroup.ZRadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="-2dp"
                android:layout_weight="1"
                app:ZRadioButton_Icon="@string/icon_tools_poem"
                app:ZRadioButton_IconTextSize="18sp"
                app:ZRadioButton_Text="诗句" />

            <LinearLayout
                android:id="@+id/rlGroupChat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone"
                >

                <com.example.administrator.dbtools.base.view.IconFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/icon_main_liaotianshi"
                    android:textColor="@drawable/selector_tab_text"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="聊天室"
                    android:textColor="@drawable/selector_tab_text"
                    android:textSize="12sp" />
            </LinearLayout>

            <com.example.administrator.dbtools.base.view.zradiogroup.ZRadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="-2dp"
                app:ZRadioButton_Icon="@string/icon_tools_sick"
                app:ZRadioButton_IconTextSize="18sp"
                app:ZRadioButton_Text="医科"
                android:visibility="visible"
                />


        </com.example.administrator.dbtools.base.view.zradiogroup.ZRadioGroup>
    </LinearLayout>
</layout>
